envoy_config.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    name: egress
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: egress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          route_config:
            virtual_hosts:
              - name: grpc_server
                domains:
                - '*'
                routes:
                - match:
                    path: '/helloworld.Greeter/SayHello'
                    headers:
                    - name: ':method'
                      exact_match: 'POST'
                  route:
                    cluster: grpc_server
                    retry_policy:
                      retry_on: '5xx'
                      num_retries: 3
                      per_try_timeout: 1s
          http_filters:
          - name: envoy.fault
            config:
              abort:
                http_status: 503
          - name: envoy.router
  clusters:
  - name: grpc_server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 'server'
                port_value: 50051
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
